--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
+
+    <a href="data:application/octet-stream;charset=utf-16le;base64,//5mAG8AbwAgAGIAYQByAAoA">text file</a>
   </body>
 
   <!-- <script id="lre-player-widget" src="https://192.168.10.201/js/lre.js" pubname="" widgetname=""></script> -->
